fix wrap height

--- a/src/scss/components/_scanImage.scss
+++ b/src/scss/components/_scanImage.scss
@@ -45,7 +45,7 @@
 .scan_title {
     z-index: 2;
     position: absolute;
-    top: 5%;
+    top: 10px;
     padding: 0 30px;
     p {
         font-family: AppleSDGothicNeoB;
